--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -73,27 +73,32 @@
     justify-content: center;
     gap: 1rem;
     appearance: hidden;
-    border: 2px solid rgba(1, 162, 255, 0.601);
+    /* border: 2px solid rgba(1, 162, 255, 0.601); */
+    border: 2px solid rgba(34, 168, 1, 0.601);
 }
 
 .alerticon {
     font-size: 30px;
-    color: rgb(1, 162, 255);
+    /* color: rgb(1, 162, 255); */
+    color: rgb(34, 168, 1);
 }
 .alerttext h1{
     font-size: 16px;
-    color: rgb(1, 162, 255);
+    /* color: rgb(1, 162, 255); */
+    color: rgb(34, 168, 1);
     font-weight: bold;
 }
 
 .alerttext p{
     font-size: 15px;
-    color: rgba(1, 162, 255, 0.601);
+    /* color: rgba(1, 162, 255, 0.601); */
+    color: rgb(34, 168, 1);
 }
 
 .alertcloseicon {
     font-size: 20px;
-    color: rgba(1, 162, 255, 0.601);
+    /* color: rgba(1, 162, 255, 0.601); */
+    color: rgb(34, 168, 1);
     cursor: pointer;
 }
 
@@ -271,6 +276,27 @@
     object-fit: cover;
     border-radius: 20px;
 }
+
+.book {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+    color: #6a8d49;
+}
+
+.booktext {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    color: black;
+}
+
 @media (max-width: 768px) {
     .navbar {
         width: 97%;
@@ -316,5 +342,9 @@
 
     .contactimg img {
         width: 100%;
+    }
+
+    .servicetext h1, .servicetext h3 {
+        text-align: center;
     }
 }
