update v2.1.2-text sizing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -283,7 +283,10 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding: 1rem;
+    padding: 2rem;
+}
+
+.book h1 {
     color: #6a8d49;
 }
 
