--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -736,3 +736,72 @@ main img {
     }
     
 }
+
+.contactus {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 50px 10%;
+}
+
+.contactusheader {
+    text-align: center;
+}
+
+.contactusheader h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: black;
+}
+
+.contactusheader h3 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #555;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.contactcontianer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.contactcontianer img {
+    width: 500px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    width: 270px;
+    object-fit: cover;
+    height: 370px;
+    border-radius: 10px;
+}
+
+.contactinfo {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    gap: 4px;
+}
+
+.contactinfo h2 {
+    font-size: 2rem;
+    font-weight: 600;
+    color: black;
+}
+
+.contactinfo p {
+    font-size: 1.2rem;
+    color: #555;
+}
+
+.contactinfo p a {
+    color: var(--accent-color);
+    text-decoration: none;
+}
