--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -500,14 +500,13 @@ main img {
 
 .testcard {
     width: 350px;
-    height: 100%;
+    height: 250px;
     border-radius: 10px;
     padding: 20px;
     margin: 10px 10px;
     display: flex;
     flex-direction: column;
     align-items: left;
-    justify-content: center;
     gap: 2px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
