--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -496,7 +496,6 @@ main img {
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: scroll;
 }
 
 .testcard {
@@ -545,8 +544,10 @@ main img {
 
 @media screen and (max-width: 650px) {
    .testimoialscards {
-        align-items: left;
-        justify-content: center;
+        align-items: center;
+        justify-content: left;
+        overflow: scroll;
+        width: 100%;
     }
 }
 
