--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -499,7 +499,7 @@ main img {
 }
 
 .testcard {
-    width: 350px;
+    width: 350px !important;
     height: 250px;
     border-radius: 10px;
     padding: 20px;
